syntax = "proto3";

package migrator;

option go_package = "migrator/proto;migrator";

service Migrator {
  rpc MigrateData (MigrateRequest) returns (MigrateResponse);
}

message MigrateRequest {
  string id = 1;
  string source_url = 2;
}

message MigrateResponse {
  string status = 1;
}
